# jiascheduler

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  console.toml  docker-compose-standalone.yml  docker-compose.yml
.github/workflows/: docker.yml
automate/: Cargo.toml
automate/src/: bridge.rs  bus.rs  comet.rs  lib.rs  scheduler.rs  ssh.rs
automate/src/bridge/: client.rs  msg.rs  protocol.rs  server.rs
automate/src/comet/: handler.rs  logic.rs  macros.rs  types.rs
automate/src/scheduler/: cmd.rs  executor.rs  file.rs  scheduler.rs  types.rs
crates/entity/: Cargo.toml
crates/entity/src/entity/: casbin_rule.rs  instance_group.rs  job.rs  job_organizer_process.rs  job_schedule.rs  job_schedule_history.rs  job_supervisor.rs  job_timer.rs  mod.rs  prelude.rs  role.rs  tag.rs  tag_resource.rs  team.rs  user.rs  user_server.rs  workflow.rs  workflow_process.rs  workflow_process_edge.rs  workflow_process_node.rs  workflow_process_node_task.rs  workflow_timer.rs  workflow_version.rs
crates/expr.rs/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mise.toml
crates/expr.rs/.github/workflows/: test.yml
crates/expr.rs/src/: context.rs  error.rs  eval.rs  expr.pest  lib.rs  macros.rs  parser.rs  pratt.rs  serde.rs  test.rs  value.rs
crates/expr.rs/src/ast/: mod.rs  node.rs  operator.rs  postfix_operator.rs  program.rs  unary_operator.rs
crates/expr.rs/src/functions/: array.rs  mod.rs  string.rs  types.rs
crates/leader-election/: Cargo.toml
crates/leader-election/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  state.rs
crates/service/src/logic/: executor.rs  instance.rs  job.rs  mod.rs  ssh.rs  tag.rs  types.rs  user.rs
crates/service/src/logic/job/: dashboard.rs  exec_history.rs  schedule.rs  supervisor.rs  timer.rs  types.rs
crates/service/src/logic/workflow/: condition.rs  mod.rs  timer.rs  types.rs  workflow.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  macros.rs
examples/: supervisor.rs  ws.rs
migration/: .env  Cargo.toml
migration/sql/: v1_0_0_down.sql  v1_0_0_up.sql  v1_1_0_001_up.sql  v1_1_0_002_down.sql  v1_1_0_002_up.sql  v1_1_0_down.sql  v1_1_0_up.sql  v1_1_1_001_up.sql
migration/sql/m20250412_add_job_soft_deleted/: down.sql  up.sql
migration/sql/m20250420_modify_job_index/: down.sql  up.sql
migration/sql/m20250513_workflow/: down.sql  up.sql
migration/sql/v1_0_0/: down.sql
migration/src/: lib.rs  m20250412_add_job_soft_deleted.rs  m20250420_modify_job_index.rs  m20250513_workflow.rs  v1_0_0_create_table.rs  v1_1_0_001_create_table.rs  v1_1_0_002_create_table.rs  v1_1_0_create_table.rs
openapi/: .env  Cargo.toml
openapi-derive/: Cargo.toml
openapi-derive/src/: lib.rs
openapi-derive/tests/: test.rs
openapi/src/: api.rs  config.rs  error.rs  job.rs  lib.rs  logic.rs  macros.rs  migration.rs  response.rs  state.rs  utils.rs
openapi/src/api/: executor.rs  file.rs  instance.rs  job.rs  manage.rs  migration.rs  role.rs  tag.rs  team.rs  terminal.rs  types.rs  user.rs  utils.rs  workflow.rs
openapi/src/api/job/: job.rs  mod.rs  types.rs
openapi/src/api/types/: job.rs  workflow.rs
openapi/src/entity/: agent_release_version.rs  executor.rs  instance.rs  instance_group.rs  instance_role.rs  job.rs  job_bundle_script.rs  job_exec_history.rs  job_organizer.rs  job_organizer_process.rs  job_organizer_release.rs  job_organizer_release_edge.rs  job_organizer_release_node.rs  job_organizer_task.rs  job_organizer_task_result.rs  job_running_status.rs  job_schedule_history.rs  job_supervisor.rs  job_timer.rs  mod.rs  prelude.rs  role.rs  tag.rs  tag_resource.rs  team.rs  team_member.rs  user.rs  user_role.rs  user_server.rs
openapi/src/logic/: executor.rs  instance.rs  job.rs  migration.rs  role.rs  ssh.rs  tag.rs  team.rs  types.rs  user.rs
openapi/src/logic/job/: bundle_script.rs  dashboard.rs  exec_history.rs  schedule.rs  supervisor.rs  timer.rs  types.rs
openapi/src/logic/migration/: v100.rs
openapi/src/middleware/: auth.rs  mod.rs  team_permission.rs
restapi/: comet.http  openapi.http
