[package]
name = "automate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem.workspace = true
clap.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
anyhow.workspace = true
local-ip-address.workspace = true
moka.workspace = true
serde_json.workspace = true
bytes.workspace = true
serde.workspace = true
file-rotate.workspace = true
tokio.workspace = true
tokio-nsq.workspace = true
cron.workspace = true
nanoid.workspace = true
redis.workspace = true
futures.workspace = true
redis-macros.workspace = true
tokio-cron-scheduler.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
watchexec-supervisor.workspace = true
users.workspace = true
rand.workspace = true
async-trait.workspace = true
russh.workspace = true
russh-keys.workspace = true
russh-sftp.workspace = true
serde_repr.workspace = true
mac_address.workspace = true
