[package]
name = "openapi-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
poem.workspace = true
poem-openapi.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
